--- a/templates/answer.html
+++ b/templates/answer.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Answer Page!</title>
+	<title>MLX Know-all Answer Page!</title>
 </head>
 <body>
-	<h1>Keep Learning Maths!</h1>
-	<h2>Square of number {{num}} is :{{squareofnum}}</h2>
+	<h2><i>Thank you for the question: {{num}}</i></h2>
+	<h2>The answer from MLX know-all is : {{squareofnum}}</h2>
 </body>
 </html>
