--- a/templates/questions.html
+++ b/templates/questions.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Square Of Number!</title>
+	<title>MLX know-all!</title>
 </head>
 <body>
-<h1><i> Welcome to the Maths page!</i></h1>
-	<p>Logic shapes every choice of our daily lives.<br>
-	Logical thinking enables someone to learn and
-	make decisions that affect their way of life. !</p>
+<h1><i> Welcome to MLX know-all!</i></h1>
+	<p>Feel free to ask me any question on MLX.<br>
+	We will try to provide the best answer up to Aug 2023. </p>
 	<form method="GET" action ="#">
-		Enter a number :
+		Enter a question :
 		<input type="text" name="num" id="num"></input>
 		<input type="submit" name="btnnum" id="btnnum"></input>
 </form>
